# GripProbe-CLI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docs_execution_flow.md  pyproject.toml
configs/: continue-local-ollama-minimal.yaml
doc/: tests.md  usage.md
docker/: Dockerfile  entrypoint.sh
docs/: index.html  preparation.md  privacy.md  tests.md  usage.md
docs/report/: summary.html  summary.md
gripprobe/: aggregate.py  backfill.py  case_result.py  cli.py  failure_reason.py  models.py  rebuild.py  results.py  runner.py  spec_loader.py  suite_runner.py  trace_analysis.py  validator_runner.py
gripprobe/adapters/: aider.py  base.py  continue_cli.py  gptme.py  opencode.py
gripprobe/reporters/: html_report.py  markdown.py
gripprobe/validators/: file_equals.py  patch_applied.py  web_nonce_proof.py  web_search_result.py  weekly_plan_task.py
report/: summary.html  summary.md
report/cases/: 20260421T161653Z__continue-cli__local_qwen2_5_7b__ollama__markdown__patch_file.html  20260421T161653Z__continue-cli__local_qwen2_5_7b__ollama__markdown__python_file_simple.html  20260421T161653Z__continue-cli__local_qwen2_5_7b__ollama__markdown__shell_date.html  20260421T161653Z__continue-cli__local_qwen2_5_7b__ollama__markdown__shell_pwd.html  20260421T164429Z__continue-cli__local_mfdoom_deepseek_r1_tool_calling_8b__ollama__tool__patch_file.html  20260421T164429Z__continue-cli__local_mfdoom_deepseek_r1_tool_calling_8b__ollama__tool__python_file_simple.html  (+383 more)
scripts/: print_hardware_profile.py
specs/: hardware_profiles.yaml
tests/: conftest.py
(+1008 files in other folders)
